# image-service

./: .env.example  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: apply-tls.yml  deploy.yml  update-secrets.yml
k8s/: http-route.yaml  mtls-gateway.yaml  mtls-policy.yaml
k8s/image-service/: 1-secrets.yaml  2-deployment.yaml  3-service.yaml
scripts/: gen-certs.sh  gen-secrets.sh
src/: config.rs  error.rs  main.rs
src/handlers/: batch.rs  health.rs  mod.rs  upload.rs
src/middleware/: auth.rs
src/processing/: image.rs  mod.rs
src/storage/: azure.rs  mod.rs
