[package]
name = "image-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "image-service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
subtle = "2"
# image decoding (jpeg, png, gif, bmp, tiff, ico) — webp via webp crate
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "ico"] }
# webp encoding con control de calidad
webp = "0.3"
# Azure Blob Storage
object_store = { version = "0.11", features = ["azure"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
bytes = "1"
futures = "0.3"
dotenvy = "0.15"
thiserror = "2"
async-trait = "0.1"
